--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Anime Quote Generator</h1>
+            <h1>Quote Generator</h1>
             <button onclick="generateQuote()">Generate Quote</button>
             <p id="quote"></p>
         </div>
